# squawker

./: .gitattributes  .gitignore  README.md  killmotors.py  pyproject.toml  run.py  squawker.service
squawker/: __init__.py  actions.py  logger.py  motors.py  sound.py
